# SDS-RAG-Systems

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
data/: README.md
help/: convert_helpman_to_wikijs.py
help/rag-indexer/: api.py  check_hybrid_search.py  index_md.py  migrate_qdrant_to_hybrid.py  search.py  start_rag_api.sh  test_openai_api.sh
scripts/: start_rag_api.sh  test_openai_api.sh
src/sds_rag/: __init__.py  cli.py
src/sds_rag/api/: app.py  schemas.py
src/sds_rag/core/: __init__.py  config.py  helpers.py  reranking.py
src/sds_rag/indexing/: __init__.py  build.py  migrate.py  search.py
tests/: test_check_hybrid_search.py  test_convert_helpman_to_wikijs.py  test_indexing_build.py  test_rag_helpers.py  test_reranking.py
tools/: check_hybrid_search.py  convert_helpman_to_wikijs.py
wikijs/: docker-compose.yml
