[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "qdrant-client[fastembed]>=1.14.2",
    "requests>=2.34.2",
    "sentence-transformers>=5.6.0",
    "tqdm>=4.68.4",
    "uvicorn[standard]>=0.51.0",
]
