[project]
name = "sds-rag"
version = "1.2.0"
description = "Hybrid RAG service for Wiki.js documentation"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "qdrant-client[fastembed]>=1.14.2",
    "requests>=2.34.2",
    "sentence-transformers>=5.6.0",
    "tqdm>=4.68.4",
    "uvicorn[standard]>=0.51.0",
]

[project.scripts]
sds-rag-api = "sds_rag.cli:serve"
sds-rag-index = "sds_rag.indexing.build:main"
sds-rag-migrate = "sds_rag.indexing.migrate:main"
sds-rag-search = "sds_rag.indexing.search:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sds_rag"]
